--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+    <header class='navbar navbar-light navbar-toggleable-md bd-navbar'>
+      <nav class='container w-100'>
+        <div class='d-flex justify-content-between hidden-lg-up'>
+          <a class='navbar-brand' href='/'>
+           hornes&hooves
+          </a>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
