--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,6 +11,14 @@
 
   <body>
     <%= render 'shared/header' %>
-    <%= yield %>
+    <div class='album'>
+      <div class='container'>
+        <div class='card'>
+          <div class='card-body'>
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
