--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,43 +6,7 @@
     <div class='clearfix'>
       <%= paginate @products, theme: 'twitter-bootstrap-4' %>
     </div>
-    <% @products.each_slice(4) do | products | %>
-      <div class='row'>
-        <% products.each do |product| %>
-          <div class='col-sm-6 col-xs-12'>
-            <div class='product-card'>
-              <p class='text-center'>
-                <%= link_to product do %>
-                  <img style='max-width: 100%;' src='<%= product.image %>' alt=''/>
-                <% end %>
-              </p>
-              <h4>
-                <%= product.name %>
-              </h4>
-              <p>
-                <%= product.description.truncate(100) %>
-              </p>
-              <div class='row'>
-                <div class='col-sm-6'>
-                  <%= link_to product, class: 'btn btn-light' do %>
-                    Read More
-                  <% end %>
-                </div>
-                <div class='col-sm-6'>
-                  <form class='form-inline pull-right' style='justify-content: flex-end;'>
-                    <label class="mr-sm-2" for="inlineFormCustomSelect">Qty:</label>
-                    <input type='number' value='1' step='1' min='1' class='form-control mr-sm-2' style='width: 4em;'/>
-                    <button class='btn btn-primary'>
-                      Add to Cart
-                    </button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+    <%= render 'products_list', products: @products %>
     <div class='clearfix'>
       <%= paginate @products, theme: 'twitter-bootstrap-4' %>
     </div>
