--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,30 @@
-<header class='navbar navbar-light navbar-toggleable-md bd-navbar'>
-  <nav class='container w-100'>
-    <div class='d-flex justify-content-between hidden-lg-up'>
-      <a class='navbar-brand' href='/'>
-        hornes&hooves
-      </a>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class='navbar-brand' href='/'>
+      hornes&hooves
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class='nav-item active'>
+          <a class="nav-link">Products</a>
+        </li>
+        <li class='nav-item'>
+          <a class="nav-link">Cart (empty)</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        <% if current_user %>
+          Hi, <%= current_user.email %>
+          <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+        <% else %>
+          <%= link_to new_user_session_path do %>
+            Sign In
+          <% end %>
+        <% end %>
+      </span>
     </div>
   </nav>
 </header>
