--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,3 +28,11 @@
     </div>
   </nav>
 </header>
+<% flash.each do |key, value| %>
+  <div class="mt-sm-3 mr-sm-3 ml-sm-3 <%= flash_class(key) %>">
+    <%= value %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% end %>
