--- a/app/views/products/_product_form.html.erb
+++ b/app/views/products/_product_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for LineItem.new(product_id: product.id, quantity: 1) do |f| %>
   <div class='form-inline' style="justify-content: <%= justify %>">
     <label class="mr-sm-2">Qty:</label>
+    <%= f.hidden_field :product_id %>
     <%= f.number_field :quantity, step: '1', min: '1', class: 'form-control mr-sm-2', style: 'width: 4em;' %>
     <button class='btn btn-primary' type='submit'>
       Add to Cart
