--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 
   <body>
     <%= render 'shared/header' %>
+
+    <% flash.each do |key, value| %>
+      <span><%= value %></span>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
