--- a/app/views/products/_products_list.html.erb
+++ b/app/views/products/_products_list.html.erb
@@ -2,31 +2,7 @@
   <div class='row'>
     <% products_group.each do |product| %>
       <div class='col-sm-6 col-xs-12'>
-        <div class='product-card'>
-          <p class='text-center'>
-            <%= link_to product do %>
-              <img style='max-width: 100%;' src='<%= product.image %>' alt=''/>
-            <% end %>
-          </p>
-          <h4>
-            <%= link_to product do %>
-              <%= product.name %>
-            <% end %>
-          </h4>
-          <p>
-            <%= product.small_description&.truncate(100) %>
-          </p>
-          <div class='row'>
-            <div class='col-md-6'>
-              <%= link_to product, class: 'btn btn-light' do %>
-                Read More
-              <% end %>
-            </div>
-            <div class='col-md-6'>
-              <%= render 'product_form', product: product, justify: 'flex-end' %>
-            </div>
-          </div>
-        </div>
+        <%= render 'product_card', product: product %>
       </div>
     <% end %>
   </div>
