--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class='album'>
   <div class='container'>
-    <div class='row row'>
+    <div class='row'>
       <div class='col-md-6 text-center mb-sm-5'>
         <img style='max-width: 100%;' src='<%= @product.image %>' alt=''/>
       </div>
@@ -13,6 +13,9 @@
             <p>
               <%= @product.small_description %>
             </p>
+            <h5>
+              <%= number_to_currency(@product.price) %>
+            </h5>
             <p>
               <%= render 'product_form', product: @product, justify: 'flex-start' %>
             </p>
